--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
-body{
-    background-color: pink;
+body {
+  background-color: pink;
 }
-*{
-    font-family: 'Nanum Pen Script', cursive;
+* {
+  font-family: "Nanum Pen Script", cursive;
 }
