--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
-#main{
-    background-color: whitesmoke;
-    width:80%;
-    text-align: center;
-    border-radius: 20px;
-    box-shadow: 0 0 10px 1px rgb(234, 157, 157);
+#main {
+  background-color: #442a2b;
+  color: white;
+  width: 80%;
+  text-align: center;
+  border-radius: 20px;
+  /* box-shadow: 0 0 10px 1px rgb(234, 157, 157); */
 }
-p{
-    font-size: 20px;
+p {
+  font-size: 20px;
 }
