--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 #main {
-  background-color: #442a2b;
-  color: white;
+  background-color: rgb(33, 31, 31);
+  color: rgb(79, 219, 66);
   width: 80%;
   text-align: center;
   border-radius: 20px;
@@ -8,4 +8,13 @@
 }
 p {
   font-size: 20px;
+}
+
+.start_btn {
+  background-color: rgb(33, 31, 31);
+  color: rgb(79, 219, 66);
+  border: none;
+  font-size: 44px;
+  letter-spacing: 10px;
+  font-family: "Galmuri9";
 }
