--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,22 @@
 #main {
-  background-color: rgb(33, 31, 31);
   color: rgb(79, 219, 66);
-  width: 80%;
+  height: 100vh;
   text-align: center;
-  border-radius: 20px;
-  /* box-shadow: 0 0 10px 1px rgb(234, 157, 157); */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
 }
 p {
   font-size: 20px;
+}
+h1 {
+  font-size: 24px;
+}
+.main_img {
+  width: 300px;
+  height: 225px;
+  object-fit: cover;
 }
 
 .start_btn {
