--- a/css/qna.css
+++ b/css/qna.css
@@ -1,48 +1,53 @@
 #qna {
-display: none;
+  display: none;
 }
 
 .qBox {
-background-color: whitesmoke;
-text-align: center;
-border-radius: 20px;
-font-size: 24px;
-width: 80%;
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
+  color: whitesmoke;
 }
 
 .answerList {
-background-color: whitesmoke;
-border-radius: 20px;
-display: block;
-width: 80%;
-border: 0px;
-font-size: 20px;
+  background-color: rgb(33, 31, 31);
+  display: block;
+  border: 0px;
+  font-size: 20px;
+  text-align: center;
+  color: whitesmoke;
+  width: 100%;
 }
 
-.answerList:hover, .answerList:focus {
-background-color: pink;
-color: whitesmoke;
+.answerList:hover,
+.answerList:focus {
+  color: rgb(79, 219, 66);
+  text-decoration: underline;
 }
 
 .status {
-height: 20px;
-width: 80%;
-background-color: white;
-border-radius: 20px;
+  width: 100%;
+  height: 20px;
+  background-color: white;
 }
 
 .statusBar {
-height: 100%;
-border-radius: 20px;
-/* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#febbbb+0,fe9090+52,ff5c5c+100;Red+3D+%231 */
-background: #febbbb;
-/* Old browsers */
-background: -moz-linear-gradient(top, #febbbb 0%, #fe9090 52%, #ff5c5c 100%);
-/* FF3.6-15 */
-background: -webkit-linear-gradient(top, #febbbb 0%, #fe9090 52%, #ff5c5c 100%);
-/* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #febbbb 0%, #fe9090 52%, #ff5c5c 100%);
-/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#febbbb', endColorstr='#ff5c5c', GradientType=0);
-/* IE6-9 */
-}     /* https://colorzilla.com/gradient-editor < 그라디언트 배경 만들기 사이트*/
+  height: 100%;
+  border-radius: 20px;
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#febbbb+0,fe9090+52,ff5c5c+100;Red+3D+%231 */
+  background: #febbbb;
+  /* Old browsers */
+  background: -moz-linear-gradient(top, #febbbb 0%, #fe9090 52%, #ff5c5c 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(
+    top,
+    #febbbb 0%,
+    #fe9090 52%,
+    #ff5c5c 100%
+  );
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #febbbb 0%, #fe9090 52%, #ff5c5c 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#febbbb', endColorstr='#ff5c5c', GradientType=0);
+  /* IE6-9 */
+} /* https://colorzilla.com/gradient-editor < 그라디언트 배경 만들기 사이트*/
