--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,15 @@
   color: rgb(79, 219, 66);
   text-align: center;
   width: 100%;
+  height: 100%;
+  /* padding-left: 30px;
+  padding-right: 30px; */
+}
+.main_contents {
   margin-top: 140px;
+  padding: 0 30px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 h1 {
@@ -51,13 +59,36 @@ p {
 }
 
 .footer {
+  width: 100%;
   position: fixed;
   bottom: 0;
+  margin-bottom: 20px;
+}
+.footer_min {
+  display: none;
   width: 100%;
+  position: fixed;
+  bottom: 0;
   margin-bottom: 20px;
 }
 
 @media (max-width: 768px) {
+  p {
+    font-size: 14px;
+  }
+
+  .page_btn {
+    font-size: 14px;
+  }
+
+  .footer {
+    display: none;
+  }
+
+  .footer_min {
+    display: block;
+    font-size: 12px;
+  }
 }
 
 @media (min-width: 769px) {
