--- a/css/result.css
+++ b/css/result.css
@@ -7,7 +7,7 @@
 }
 
 .result_contents {
-  margin-top: 20vh;
+  margin-top: 18vh;
   padding: 0 30px;
   word-wrap: break-word;
   word-break: break-all;
@@ -60,15 +60,33 @@
   margin-top: 20px;
 }
 
+.result_name {
+  color: whitesmoke;
+  font-size: 22px;
+}
+.result_text {
+  font-size: 12px;
+}
+
+.result_negative {
+}
+
 @media (max-width: 768px) {
   .resultImg {
     width: 200px;
   }
   .result_contents {
-    margin-top: 20vh;
+    margin-top: 18vh;
     padding: 0 30px;
     word-wrap: break-word;
     word-break: break-all;
+  }
+
+  .result_name {
+  }
+  .result_text {
+  }
+  .result_negative {
   }
 }
 
